# aughrimhallra.github.io

./: .gitignore  .markdownlint.json  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: main.yml
docs/: index.md  mail-on-mac.md  mail-on-windows.md  outlook-on-mac.md  outlook-on-windows.md
docs/css/: extra.css
mail-on-mac/: index.html
mail-on-windows/: index.html
outlook-on-mac/: index.html
outlook-on-windows/: index.html
search/: search_index.json
